# runewise

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: check-map-version.mjs  gen-icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: light-theme.test.tsx  notification-dedupe.test.ts  overview-weakness.test.tsx  power-features.test.ts
src/components/: AppIcon.tsx  Chart.tsx  DropTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  ExternalLink.tsx  FilterPills.tsx  FreshnessStrip.tsx  GlobalSearch.tsx  ItemTooltip.tsx  PanelLayout.tsx  PlayerBar.tsx  SearchDialog.tsx  SearchInput.tsx  ShellIcon.tsx  Sidebar.tsx  Skeleton.tsx  SourceAttribution.tsx  StatCard.tsx  UpdateDialog.tsx  UpdateDialogHelpers.tsx  UpdateStageHero.tsx  ViewErrorBoundary.tsx  WikiImage.tsx
src/hooks/: useAsyncData.ts  useGEData.ts  useHiscores.ts  useKeyboardNav.ts  useSettings.ts  useWatchlist.ts
src/lib/: NavigationContext.tsx  changelog.ts  discord-rpc.ts  env.ts  featureAccent.ts  features.test.ts  features.ts  format.test.ts  format.ts  itemIcons.ts  localStorage.ts  logger.ts  notify.ts  openExternal.ts  search.test.ts  (+9 more)
(+189 files in other folders)
